fix: wrap tags

--- a/src/scss/page.scss
+++ b/src/scss/page.scss
@@ -435,11 +435,11 @@
     line-height: 112%;
   }
 
-  // .invite-card__text
+  // card__text
 
   &__text {
-    color: rgba($color: #ffffff, $alpha: 1.0);
-    font-size: 14px;
+    color: rgba($color: #ffffff, $alpha: .8);
+    font-size: 16px;
     font-weight: 300;
     line-height: 150%;
   }
@@ -487,7 +487,7 @@
   width: 100%;
   display: flex;
   align-items: center;
-  flex-wrap: nowrap;
+  flex-wrap: wrap;
   gap: 8px;
   overflow-x: auto;
 }
